# keystroke-analytics

./: .gitattributes  .gitignore  .style.yapf  README.md  justfile  keylogger.py  launch_gui.bat  pyproject.toml  test_keylogger.py
keystroke_analytics/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py
keystroke_analytics/analytics/: __init__.py  biometrics.py
keystroke_analytics/capture/: __init__.py  keyboard.py  window.py
keystroke_analytics/delivery/: __init__.py  webhook.py
keystroke_analytics/gui/: app.py  controller.py  dialogs.py  main_window.py  panels_logs.py  panels_report.py  panels_stats.py  state.py  theme.py  widgets.py
keystroke_analytics/storage/: __init__.py  encrypted_logger.py  rotation.py
learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
tests/: test_analytics.py  test_config.py  test_delivery.py  test_gui_smoke.py  test_models.py  test_storage.py
