[project]
name = "keystroke-analytics"
version = "1.0.0"
description = "Cross-platform keystroke analytics with typing biometrics — dwell time, flight time, WPM, rhythm profiling, and encrypted log storage."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pynput>=1.7",
    "requests>=2.31",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=42.0",
]
yaml = [
    "pyyaml>=6.0",
]
windows = [
    "pywin32>=306",
    "psutil>=5.9",
]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "cryptography>=42.0",
    "types-requests>=2.31",
]
all = [
    "keystroke-analytics[crypto,yaml,dev]",
]

[project.scripts]
keystroke-analytics = "keystroke_analytics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keystroke_analytics"]


# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "SIM",  # simplify
]
ignore = [
    "E501",   # line length (formatter handles it)
    "SIM115", # open() without with — intentional in file-owning classes
]

[tool.ruff.lint.isort]
known-first-party = ["keystroke_analytics"]


# ── Mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false
show_error_codes = true
pretty = true
exclude = [".venv", "venv", "build", "dist"]


# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
